// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File should render 1`] = `
<body>
  <div>
    <div
      class=" border-b p-4 py-2 dark:border-neutral-700/50"
    >
      <p
        class="cursor-pointer mb-1 font-semibold flex items-center gap-2 justify-between dark:text-neutral-200"
      >
        <span>
          File name
        </span>
        <svg
          class="stroke-neutral-300 hover:stroke-red-500 hover:cursor-pointer dark:stroke-neutral-400 dark:hover:stroke-red-600"
          data-testid="trash-icon"
          fill="none"
          height="1.125rem"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1.125rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="3 6 5 6 21 6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
          <line
            x1="10"
            x2="10"
            y1="11"
            y2="17"
          />
          <line
            x1="14"
            x2="14"
            y1="11"
            y2="17"
          />
        </svg>
      </p>
      <p
        class="cursor-pointer overflow-hidden text-ellipsis max-h-16 h-[4rem] text-sm text-neutral-400 dark:text-neutral-400"
      >
        markdown text
      </p>
    </div>
  </div>
</body>
`;

exports[`File should render current select file 1`] = `
<body>
  <div>
    <div
      class="bg-yellow-50/70 dark:bg-yellow-800/10 border-b p-4 py-2 dark:border-neutral-700/50"
    >
      <p
        class="cursor-pointer mb-1 font-semibold flex items-center gap-2 justify-between dark:text-neutral-200"
      >
        <span>
          File name
        </span>
        <svg
          class="stroke-neutral-300 hover:stroke-red-500 hover:cursor-pointer dark:stroke-neutral-400 dark:hover:stroke-red-600"
          data-testid="trash-icon"
          fill="none"
          height="1.125rem"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1.125rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="3 6 5 6 21 6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
          <line
            x1="10"
            x2="10"
            y1="11"
            y2="17"
          />
          <line
            x1="14"
            x2="14"
            y1="11"
            y2="17"
          />
        </svg>
      </p>
      <p
        class="cursor-pointer overflow-hidden text-ellipsis max-h-16 h-[4rem] text-sm text-neutral-400 dark:text-neutral-400"
      >
        markdown text
      </p>
    </div>
  </div>
</body>
`;
